sqlParser.js
// Generated from .\sql.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var sqlListener = require('./sqlListener').sqlListener;
var grammarFileName = "sql.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'*'", "','", "'('", "')'", "'.'", "'['", "']'", 
                     "'??'", "'?'", "':'", "'{'", "'}'", "'+'", "'&'", "'|'", 
                     "'^'", "'/'", "'='", "'>'", "'>='", "'<'", "'<='", 
                     "'%'", "'!='", "'||'", "'-'", "'~'", null, null, null, 
                     null, null, null, null, null, null, "'false'", null, 
                     null, null, null, null, null, "'null'", null, null, 
                     null, null, null, "'true'", null, "'undefined'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, "K_AND", "K_ARRAY", "K_AS", "K_ASC", "K_BETWEEN", 
                      "K_BY", "K_DESC", "K_DISTINCT", "K_EXISTS", "K_FALSE", 
                      "K_FROM", "K_GROUP", "K_IN", "K_JOIN", "K_LIMIT", 
                      "K_NOT", "K_NULL", "K_OFFSET", "K_OR", "K_ORDER", 
                      "K_SELECT", "K_TOP", "K_TRUE", "K_UDF", "K_UNDEFINED", 
                      "K_VALUE", "K_WHERE", "WS", "NUMERIC_LITERAL", "STRING_LITERAL", 
                      "IDENTIFIER" ];

var ruleNames =  [ "program", "sql_query", "select_clause", "top_spec", 
                   "selection", "select_star_spec", "select_value_spec", 
                   "select_list_spec", "select_item", "from_clause", "collection_expression", 
                   "collection", "path_expression", "where_clause", "group_by_clause", 
                   "order_by_clause", "order_by_items", "order_by_item", 
                   "sort_order", "offset_limit_clause", "offset_count", 
                   "limit_count", "scalar_expression", "scalar_expression_list", 
                   "binary_operator", "unary_operator", "object_propertty_list", 
                   "object_property", "literal" ];

function sqlParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

sqlParser.prototype = Object.create(antlr4.Parser.prototype);
sqlParser.prototype.constructor = sqlParser;

Object.defineProperty(sqlParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

sqlParser.EOF = antlr4.Token.EOF;
sqlParser.T__0 = 1;
sqlParser.T__1 = 2;
sqlParser.T__2 = 3;
sqlParser.T__3 = 4;
sqlParser.T__4 = 5;
sqlParser.T__5 = 6;
sqlParser.T__6 = 7;
sqlParser.T__7 = 8;
sqlParser.T__8 = 9;
sqlParser.T__9 = 10;
sqlParser.T__10 = 11;
sqlParser.T__11 = 12;
sqlParser.T__12 = 13;
sqlParser.T__13 = 14;
sqlParser.T__14 = 15;
sqlParser.T__15 = 16;
sqlParser.T__16 = 17;
sqlParser.T__17 = 18;
sqlParser.T__18 = 19;
sqlParser.T__19 = 20;
sqlParser.T__20 = 21;
sqlParser.T__21 = 22;
sqlParser.T__22 = 23;
sqlParser.T__23 = 24;
sqlParser.T__24 = 25;
sqlParser.T__25 = 26;
sqlParser.T__26 = 27;
sqlParser.K_AND = 28;
sqlParser.K_ARRAY = 29;
sqlParser.K_AS = 30;
sqlParser.K_ASC = 31;
sqlParser.K_BETWEEN = 32;
sqlParser.K_BY = 33;
sqlParser.K_DESC = 34;
sqlParser.K_DISTINCT = 35;
sqlParser.K_EXISTS = 36;
sqlParser.K_FALSE = 37;
sqlParser.K_FROM = 38;
sqlParser.K_GROUP = 39;
sqlParser.K_IN = 40;
sqlParser.K_JOIN = 41;
sqlParser.K_LIMIT = 42;
sqlParser.K_NOT = 43;
sqlParser.K_NULL = 44;
sqlParser.K_OFFSET = 45;
sqlParser.K_OR = 46;
sqlParser.K_ORDER = 47;
sqlParser.K_SELECT = 48;
sqlParser.K_TOP = 49;
sqlParser.K_TRUE = 50;
sqlParser.K_UDF = 51;
sqlParser.K_UNDEFINED = 52;
sqlParser.K_VALUE = 53;
sqlParser.K_WHERE = 54;
sqlParser.WS = 55;
sqlParser.NUMERIC_LITERAL = 56;
sqlParser.STRING_LITERAL = 57;
sqlParser.IDENTIFIER = 58;

sqlParser.RULE_program = 0;
sqlParser.RULE_sql_query = 1;
sqlParser.RULE_select_clause = 2;
sqlParser.RULE_top_spec = 3;
sqlParser.RULE_selection = 4;
sqlParser.RULE_select_star_spec = 5;
sqlParser.RULE_select_value_spec = 6;
sqlParser.RULE_select_list_spec = 7;
sqlParser.RULE_select_item = 8;
sqlParser.RULE_from_clause = 9;
sqlParser.RULE_collection_expression = 10;
sqlParser.RULE_collection = 11;
sqlParser.RULE_path_expression = 12;
sqlParser.RULE_where_clause = 13;
sqlParser.RULE_group_by_clause = 14;
sqlParser.RULE_order_by_clause = 15;
sqlParser.RULE_order_by_items = 16;
sqlParser.RULE_order_by_item = 17;
sqlParser.RULE_sort_order = 18;
sqlParser.RULE_offset_limit_clause = 19;
sqlParser.RULE_offset_count = 20;
sqlParser.RULE_limit_count = 21;
sqlParser.RULE_scalar_expression = 22;
sqlParser.RULE_scalar_expression_list = 23;
sqlParser.RULE_binary_operator = 24;
sqlParser.RULE_unary_operator = 25;
sqlParser.RULE_object_propertty_list = 26;
sqlParser.RULE_object_property = 27;
sqlParser.RULE_literal = 28;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.sql_query = function() {
    return this.getTypedRuleContext(Sql_queryContext,0);
};

ProgramContext.prototype.EOF = function() {
    return this.getToken(sqlParser.EOF, 0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitProgram(this);
	}
};




sqlParser.ProgramContext = ProgramContext;

sqlParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, sqlParser.RULE_program);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 58;
        this.sql_query();
        this.state = 59;
        this.match(sqlParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Sql_queryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_sql_query;
    return this;
}

Sql_queryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Sql_queryContext.prototype.constructor = Sql_queryContext;

Sql_queryContext.prototype.select_clause = function() {
    return this.getTypedRuleContext(Select_clauseContext,0);
};

Sql_queryContext.prototype.from_clause = function() {
    return this.getTypedRuleContext(From_clauseContext,0);
};

Sql_queryContext.prototype.where_clause = function() {
    return this.getTypedRuleContext(Where_clauseContext,0);
};

Sql_queryContext.prototype.group_by_clause = function() {
    return this.getTypedRuleContext(Group_by_clauseContext,0);
};

Sql_queryContext.prototype.order_by_clause = function() {
    return this.getTypedRuleContext(Order_by_clauseContext,0);
};

Sql_queryContext.prototype.offset_limit_clause = function() {
    return this.getTypedRuleContext(Offset_limit_clauseContext,0);
};

Sql_queryContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterSql_query(this);
	}
};

Sql_queryContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitSql_query(this);
	}
};




sqlParser.Sql_queryContext = Sql_queryContext;

sqlParser.prototype.sql_query = function() {

    var localctx = new Sql_queryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, sqlParser.RULE_sql_query);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this.select_clause();
        this.state = 63;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_FROM) {
            this.state = 62;
            this.from_clause();
        }

        this.state = 66;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_WHERE) {
            this.state = 65;
            this.where_clause();
        }

        this.state = 69;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_GROUP) {
            this.state = 68;
            this.group_by_clause();
        }

        this.state = 72;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_ORDER) {
            this.state = 71;
            this.order_by_clause();
        }

        this.state = 75;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_OFFSET) {
            this.state = 74;
            this.offset_limit_clause();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Select_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_select_clause;
    return this;
}

Select_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Select_clauseContext.prototype.constructor = Select_clauseContext;

Select_clauseContext.prototype.K_SELECT = function() {
    return this.getToken(sqlParser.K_SELECT, 0);
};

Select_clauseContext.prototype.selection = function() {
    return this.getTypedRuleContext(SelectionContext,0);
};

Select_clauseContext.prototype.K_DISTINCT = function() {
    return this.getToken(sqlParser.K_DISTINCT, 0);
};

Select_clauseContext.prototype.top_spec = function() {
    return this.getTypedRuleContext(Top_specContext,0);
};

Select_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterSelect_clause(this);
	}
};

Select_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitSelect_clause(this);
	}
};




sqlParser.Select_clauseContext = Select_clauseContext;

sqlParser.prototype.select_clause = function() {

    var localctx = new Select_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, sqlParser.RULE_select_clause);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 77;
        this.match(sqlParser.K_SELECT);
        this.state = 79;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_DISTINCT) {
            this.state = 78;
            this.match(sqlParser.K_DISTINCT);
        }

        this.state = 82;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_TOP) {
            this.state = 81;
            this.top_spec();
        }

        this.state = 84;
        this.selection();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Top_specContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_top_spec;
    return this;
}

Top_specContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Top_specContext.prototype.constructor = Top_specContext;

Top_specContext.prototype.K_TOP = function() {
    return this.getToken(sqlParser.K_TOP, 0);
};

Top_specContext.prototype.NUMERIC_LITERAL = function() {
    return this.getToken(sqlParser.NUMERIC_LITERAL, 0);
};

Top_specContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterTop_spec(this);
	}
};

Top_specContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitTop_spec(this);
	}
};




sqlParser.Top_specContext = Top_specContext;

sqlParser.prototype.top_spec = function() {

    var localctx = new Top_specContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, sqlParser.RULE_top_spec);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        this.match(sqlParser.K_TOP);
        this.state = 87;
        this.match(sqlParser.NUMERIC_LITERAL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SelectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_selection;
    return this;
}

SelectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SelectionContext.prototype.constructor = SelectionContext;

SelectionContext.prototype.select_star_spec = function() {
    return this.getTypedRuleContext(Select_star_specContext,0);
};

SelectionContext.prototype.select_value_spec = function() {
    return this.getTypedRuleContext(Select_value_specContext,0);
};

SelectionContext.prototype.select_list_spec = function() {
    return this.getTypedRuleContext(Select_list_specContext,0);
};

SelectionContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterSelection(this);
	}
};

SelectionContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitSelection(this);
	}
};




sqlParser.SelectionContext = SelectionContext;

sqlParser.prototype.selection = function() {

    var localctx = new SelectionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, sqlParser.RULE_selection);
    try {
        this.state = 92;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case sqlParser.T__0:
            this.enterOuterAlt(localctx, 1);
            this.state = 89;
            this.select_star_spec();
            break;
        case sqlParser.K_VALUE:
            this.enterOuterAlt(localctx, 2);
            this.state = 90;
            this.select_value_spec();
            break;
        case sqlParser.T__2:
        case sqlParser.T__5:
        case sqlParser.T__10:
        case sqlParser.T__12:
        case sqlParser.T__25:
        case sqlParser.T__26:
        case sqlParser.K_ARRAY:
        case sqlParser.K_EXISTS:
        case sqlParser.K_FALSE:
        case sqlParser.K_NOT:
        case sqlParser.K_NULL:
        case sqlParser.K_TRUE:
        case sqlParser.K_UDF:
        case sqlParser.K_UNDEFINED:
        case sqlParser.NUMERIC_LITERAL:
        case sqlParser.STRING_LITERAL:
        case sqlParser.IDENTIFIER:
            this.enterOuterAlt(localctx, 3);
            this.state = 91;
            this.select_list_spec();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Select_star_specContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_select_star_spec;
    return this;
}

Select_star_specContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Select_star_specContext.prototype.constructor = Select_star_specContext;


Select_star_specContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterSelect_star_spec(this);
	}
};

Select_star_specContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitSelect_star_spec(this);
	}
};




sqlParser.Select_star_specContext = Select_star_specContext;

sqlParser.prototype.select_star_spec = function() {

    var localctx = new Select_star_specContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, sqlParser.RULE_select_star_spec);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.match(sqlParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Select_value_specContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_select_value_spec;
    return this;
}

Select_value_specContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Select_value_specContext.prototype.constructor = Select_value_specContext;

Select_value_specContext.prototype.K_VALUE = function() {
    return this.getToken(sqlParser.K_VALUE, 0);
};

Select_value_specContext.prototype.scalar_expression = function() {
    return this.getTypedRuleContext(Scalar_expressionContext,0);
};

Select_value_specContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterSelect_value_spec(this);
	}
};

Select_value_specContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitSelect_value_spec(this);
	}
};




sqlParser.Select_value_specContext = Select_value_specContext;

sqlParser.prototype.select_value_spec = function() {

    var localctx = new Select_value_specContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, sqlParser.RULE_select_value_spec);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this.match(sqlParser.K_VALUE);
        this.state = 97;
        this.scalar_expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Select_list_specContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_select_list_spec;
    return this;
}

Select_list_specContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Select_list_specContext.prototype.constructor = Select_list_specContext;

Select_list_specContext.prototype.select_item = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Select_itemContext);
    } else {
        return this.getTypedRuleContext(Select_itemContext,i);
    }
};

Select_list_specContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterSelect_list_spec(this);
	}
};

Select_list_specContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitSelect_list_spec(this);
	}
};




sqlParser.Select_list_specContext = Select_list_specContext;

sqlParser.prototype.select_list_spec = function() {

    var localctx = new Select_list_specContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, sqlParser.RULE_select_list_spec);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 99;
        this.select_item();
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===sqlParser.T__1) {
            this.state = 100;
            this.match(sqlParser.T__1);
            this.state = 101;
            this.select_item();
            this.state = 106;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Select_itemContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_select_item;
    return this;
}

Select_itemContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Select_itemContext.prototype.constructor = Select_itemContext;

Select_itemContext.prototype.scalar_expression = function() {
    return this.getTypedRuleContext(Scalar_expressionContext,0);
};

Select_itemContext.prototype.K_AS = function() {
    return this.getToken(sqlParser.K_AS, 0);
};

Select_itemContext.prototype.IDENTIFIER = function() {
    return this.getToken(sqlParser.IDENTIFIER, 0);
};

Select_itemContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterSelect_item(this);
	}
};

Select_itemContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitSelect_item(this);
	}
};




sqlParser.Select_itemContext = Select_itemContext;

sqlParser.prototype.select_item = function() {

    var localctx = new Select_itemContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, sqlParser.RULE_select_item);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this.scalar_expression(0);
        this.state = 110;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===sqlParser.K_AS) {
            this.state = 108;
            this.match(sqlParser.K_AS);
            this.state = 109;
            this.match(sqlParser.IDENTIFIER);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function From_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_from_clause;
    return this;
}

From_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
From_clauseContext.prototype.constructor = From_clauseContext;

From_clauseContext.prototype.K_FROM = function() {
    return this.getToken(sqlParser.K_FROM, 0);
};

From_clauseContext.prototype.collection_expression = function() {
    return this.getTypedRuleContext(Collection_expressionContext,0);
};

From_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.enterFrom_clause(this);
	}
};

From_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof sqlListener ) {
        listener.exitFrom_clause(this);
	}
};




sqlParser.From_clauseContext = From_clauseContext;

sqlParser.prototype.from_clause = function() {

    var localctx = new From_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, sqlParser.RULE_from_clause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this.match(sqlParser.K_FROM);
        this.state = 113;
        this.collection_expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Collection_expressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = sqlParser.RULE_collection_expression;
    return this;
}
